sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: type boolean
     var sp : boolean = false;
              ^